[gd_scene load_steps=8 format=3 uid="uid://bqsmfx60181ns"]

[ext_resource type="Script" uid="uid://gdl6ng1wjx3u" path="res://Scripts/UI/StartMenu.gd" id="1_jgtwh"]
[ext_resource type="Theme" uid="uid://dljqrqoj41xf7" path="res://Assets/Resources/theme.tres" id="1_juhg0"]
[ext_resource type="Texture2D" uid="uid://ci24sbmfj03u7" path="res://Assets/Art/house.png" id="4_8u0lp"]
[ext_resource type="Texture2D" uid="uid://b8t616ns614os" path="res://Assets/Art/furniture.png" id="5_i2i62"]

[sub_resource type="Animation" id="Animation_a43kq"]
resource_name = "float"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HouseSprites:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10), Vector2(0, 10)]
}

[sub_resource type="Animation" id="Animation_626he"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HouseSprites:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8u0lp"]
_data = {
&"RESET": SubResource("Animation_626he"),
&"float": SubResource("Animation_a43kq")
}

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_jgtwh")

[node name="DarkBackground" type="ColorRect" parent="."]
z_index = -1
layout_mode = 0
offset_right = 1154.0
offset_bottom = 653.0
color = Color(0, 0, 0, 1)

[node name="HouseSprites" type="Node2D" parent="."]

[node name="House" type="Sprite2D" parent="HouseSprites"]
modulate = Color(0.69965345, 0.69965345, 0.69965345, 1)
z_index = -1
position = Vector2(804.86163, 317)
scale = Vector2(0.73494965, 0.73494965)
texture = ExtResource("4_8u0lp")

[node name="TopFurniture" type="Sprite2D" parent="HouseSprites"]
z_index = -1
position = Vector2(827.99994, 210)
scale = Vector2(0.73494965, 0.73494965)
texture = ExtResource("5_i2i62")
region_enabled = true
region_rect = Rect2(0, 52.39003, 819, 382.36017)

[node name="BtmRFurniture" type="Sprite2D" parent="HouseSprites"]
z_index = -1
position = Vector2(957, 438.00003)
scale = Vector2(0.73494965, 0.73494965)
texture = ExtResource("5_i2i62")
region_enabled = true
region_rect = Rect2(460, 429, 285, 275)

[node name="BtmMFurniture" type="Sprite2D" parent="HouseSprites"]
z_index = -1
position = Vector2(770, 391.00003)
scale = Vector2(0.73494977, 0.73494977)
texture = ExtResource("5_i2i62")
region_enabled = true
region_rect = Rect2(104, 438, 83, 96)

[node name="BtmMFurniture2" type="Sprite2D" parent="HouseSprites"]
z_index = -1
position = Vector2(843.99994, 388.00003)
scale = Vector2(0.73494965, 0.73494965)
texture = ExtResource("5_i2i62")
region_enabled = true
region_rect = Rect2(297, 439, 97, 91)

[node name="BtmLFurniture1" type="Sprite2D" parent="HouseSprites"]
z_index = -1
position = Vector2(707, 477)
scale = Vector2(0.73494965, 0.73494965)
texture = ExtResource("5_i2i62")
region_enabled = true
region_rect = Rect2(93, 538, 308, 163)

[node name="WallMiddle" type="Sprite2D" parent="HouseSprites"]
modulate = Color(0.69965345, 0.69965345, 0.69965345, 1)
z_index = -1
position = Vector2(804.86163, 344)
scale = Vector2(0.73494965, 0.73494965)
texture = ExtResource("4_8u0lp")
region_enabled = true
region_rect = Rect2(0, 409, 786, 39)

[node name="WallTopLeft" type="Sprite2D" parent="HouseSprites"]
modulate = Color(0.69965345, 0.69965345, 0.69965345, 1)
z_index = -1
position = Vector2(554, 230.99997)
scale = Vector2(0.73494965, 0.73494965)
texture = ExtResource("4_8u0lp")
region_enabled = true
region_rect = Rect2(35, 102, 35, 346)

[node name="PlayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 55.0
offset_top = 110.0
offset_right = 455.0
offset_bottom = 210.0
theme = ExtResource("1_juhg0")
text = "PLAY"

[node name="ControlsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 55.0
offset_top = 287.0
offset_right = 455.0
offset_bottom = 387.0
theme = ExtResource("1_juhg0")
text = "CONTROLS"

[node name="CreditsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 55.0
offset_top = 451.0
offset_right = 455.0
offset_bottom = 551.0
theme = ExtResource("1_juhg0")
text = "CREDITS"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8u0lp")
}

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
